12 tastes left oday

--- a/app/src/main/res/layout/activity_create_team.xml
+++ b/app/src/main/res/layout/activity_create_team.xml
@@ -9,18 +9,16 @@
     tools:context=".CreateTeamActivity">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/txtVCreate_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="7dp"
         android:fontFamily="sans-serif-black"
-        android:text="Create a Team"
+        android:text="USERNAME's New Team"
         android:textColor="#FE5151"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/textView5"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/textView5" />
 
     <TextView
         android:id="@+id/textView5"
@@ -32,20 +30,19 @@
         android:text="Pokémon 1"
         android:textColor="#FDCE40"
         app:layout_constraintBottom_toTopOf="@+id/spnVCreateTeam_pkmn1"
-        app:layout_constraintStart_toStartOf="@+id/spnVCreateTeam_pkmn1"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintStart_toStartOf="@+id/spnVCreateTeam_pkmn1" />
 
     <Spinner
         android:id="@+id/spnVCreateTeam_pkmn1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="1dp"
+        android:layout_marginTop="64dp"
         android:layout_marginEnd="1dp"
         android:backgroundTint="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/textView6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView6"
@@ -55,7 +52,6 @@
         android:fontFamily="sans-serif-black"
         android:text="Pokémon 2"
         android:textColor="#FDCE40"
-        app:layout_constraintBottom_toTopOf="@+id/spnVCreateTeam_pkmn2"
         app:layout_constraintStart_toStartOf="@+id/spnVCreateTeam_pkmn1"
         app:layout_constraintTop_toBottomOf="@+id/spnVCreateTeam_pkmn1" />
 
@@ -64,9 +60,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="1dp"
+        android:layout_marginTop="1dp"
         android:layout_marginEnd="1dp"
         android:backgroundTint="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/textView7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
@@ -76,11 +72,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="14dp"
-        android:layout_marginBottom="2dp"
         android:fontFamily="sans-serif-black"
         android:text="Pokémon 3"
         android:textColor="#FDCE40"
-        app:layout_constraintBottom_toTopOf="@+id/spnVCreate_pkmn3"
         app:layout_constraintStart_toStartOf="@+id/spnVCreateTeam_pkmn2"
         app:layout_constraintTop_toBottomOf="@+id/spnVCreateTeam_pkmn2" />
 
@@ -89,9 +83,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="1dp"
+        android:layout_marginTop="2dp"
         android:layout_marginEnd="1dp"
         android:backgroundTint="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/textView8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
@@ -101,11 +95,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="14dp"
-        android:layout_marginBottom="5dp"
         android:fontFamily="sans-serif-black"
         android:text="Pokémon 4"
         android:textColor="#FDCE40"
-        app:layout_constraintBottom_toTopOf="@+id/spnVCreate_pkmn4"
         app:layout_constraintStart_toStartOf="@+id/spnVCreate_pkmn3"
         app:layout_constraintTop_toBottomOf="@+id/spnVCreate_pkmn3" />
 
@@ -114,9 +106,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="1dp"
+        android:layout_marginTop="6dp"
         android:layout_marginEnd="1dp"
         android:backgroundTint="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/textView9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
@@ -129,7 +121,6 @@
         android:fontFamily="sans-serif-black"
         android:text="Pokémon 5"
         android:textColor="#FDCE40"
-        app:layout_constraintBottom_toTopOf="@+id/spnVCreateTeam_pkmn5"
         app:layout_constraintStart_toStartOf="@+id/spnVCreate_pkmn4"
         app:layout_constraintTop_toBottomOf="@+id/spnVCreate_pkmn4" />
 
@@ -139,9 +130,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="1dp"
         android:layout_marginEnd="1dp"
-        android:layout_marginBottom="1dp"
         android:backgroundTint="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/textView10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
@@ -151,11 +140,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="6dp"
+        android:layout_marginTop="1dp"
         android:fontFamily="sans-serif-black"
         android:text="Pokémon 6"
         android:textColor="#FDCE40"
-        app:layout_constraintBottom_toTopOf="@+id/spnVCreate_pkmn6"
         app:layout_constraintStart_toStartOf="@+id/spnVCreateTeam_pkmn5"
         app:layout_constraintTop_toBottomOf="@+id/spnVCreateTeam_pkmn5" />
 
@@ -165,37 +153,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="1dp"
         android:layout_marginEnd="1dp"
-        android:layout_marginBottom="3dp"
         android:backgroundTint="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/etVCreate_teamName"
+        app:layout_constraintBottom_toTopOf="@+id/txtVCreate_errorSix"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView10" />
-
-    <EditText
-        android:id="@+id/etVCreate_teamName"
-        android:layout_width="211dp"
-        android:layout_height="0dp"
-        android:ems="10"
-        android:hint="Team Name"
-        android:inputType="text"
-        android:textColorHint="#81FD5151"
-        app:layout_constraintBottom_toTopOf="@+id/btnVCreateTeam_createTeam"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spnVCreate_pkmn6" />
-
-    <TextView
-        android:id="@+id/txtVCreate_errorName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="35dp"
-        android:fontFamily="sans-serif-black"
-        android:text="Error: Please name your team so your Pokémon have a sense of comradery!"
-        android:textAlignment="center"
-        android:textColor="#FD5151"
-        app:layout_constraintStart_toStartOf="@+id/txtVCreate_errorSix"
-        app:layout_constraintTop_toTopOf="@+id/txtVCreate_errorSix" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btnVCreateTeam_back"
@@ -206,7 +167,6 @@
         android:text="Go Back"
         android:textColor="#000000"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/txtVCreate_errorSix"
         app:layout_constraintStart_toStartOf="@+id/btnVCreateTeam_createTeam"
         app:layout_constraintTop_toBottomOf="@+id/btnVCreateTeam_createTeam" />
 
@@ -214,26 +174,24 @@
         android:id="@+id/btnVCreateTeam_createTeam"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="21dp"
         android:backgroundTint="#FDCE40"
         android:text="Create Team"
         android:textColor="#000000"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/btnVCreateTeam_back"
-        app:layout_constraintStart_toStartOf="@+id/etVCreate_teamName"
-        app:layout_constraintTop_toBottomOf="@+id/etVCreate_teamName" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtVCreate_errorSix" />
 
     <TextView
         android:id="@+id/txtVCreate_errorSix"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="235dp"
+        android:layout_marginTop="25dp"
         android:fontFamily="sans-serif-black"
         android:text="Error: Please select six Pokémon so your team members have lots of friends!"
         android:textAlignment="center"
         android:textColor="#FD5151"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnVCreateTeam_back" />
+        app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
