--- a/app/src/main/res/layout/activity_battle_results.xml
+++ b/app/src/main/res/layout/activity_battle_results.xml
@@ -9,7 +9,7 @@
     tools:context=".BattleResultsActivity">
 
     <TextView
-        android:id="@+id/textView18"
+        android:id="@+id/txtVResults_curUse"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -30,7 +30,7 @@
         app:layout_constraintBottom_toTopOf="@+id/txtVBattleResults_currentUserBST"
         app:layout_constraintEnd_toEndOf="@+id/txtVBattleResults_currentUserBST"
         app:layout_constraintStart_toEndOf="@+id/txtVBattleResults_currentUserBST"
-        app:layout_constraintTop_toBottomOf="@+id/textView18" />
+        app:layout_constraintTop_toBottomOf="@+id/txtVResults_curUse" />
 
     <TextView
         android:id="@+id/txtVBattleResults_currentUserBST"
@@ -111,4 +111,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtVBattleResults_results" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
