--- a/app/src/main/res/layout/activity_confirm_delete.xml
+++ b/app/src/main/res/layout/activity_confirm_delete.xml
@@ -8,57 +8,30 @@
     android:background="#253BF7"
     tools:context=".ConfirmDeleteActivity">
 
-    <ListView
-        android:id="@+id/lvVConfirmDelete_team"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="6dp"
-        android:layout_marginEnd="6dp"
-        android:layout_marginBottom="47dp"
-        app:layout_constraintBottom_toTopOf="@+id/btnVConfirmDelete_back"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView11" />
-
     <TextView
-        android:id="@+id/textView11"
+        android:id="@+id/txtVConfirmDelete_holdOn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="104dp"
         android:fontFamily="sans-serif-black"
-        android:text="Are you sure you want to delete your TEAM NAME team? This action cannot be undone."
+        android:text="Hold your Horseas, USERNAME! Do you know the consequences of your actions?"
         android:textAlignment="center"
         android:textColor="#FD5151"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/lvVConfirmDelete_team"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/btnVConfirmDelete_delete"
+    <TextView
+        android:id="@+id/txtVConDel_thisIsWhat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:backgroundTint="#FCCD40"
-        android:fontFamily="sans-serif-black"
-        android:text="YES, PLEASE DELETE"
+        android:layout_marginTop="18dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="This is what you'll lose if you delete THING:"
+        android:textAlignment="center"
         android:textColor="#FC5151"
         android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="@+id/btnVConfirmDelete_back"
-        app:layout_constraintTop_toBottomOf="@+id/lvVConfirmDelete_team" />
-
-    <Button
-        android:id="@+id/btnVConfirmDelete_back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="73dp"
-        android:backgroundTint="#FBCC40"
-        android:text="No, Please Don't Delete"
-        android:textColor="#000000"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lvVConfirmDelete_team" />
+        app:layout_constraintTop_toBottomOf="@+id/txtVConfirmDelete_holdOn" />
 </androidx.constraintlayout.widget.ConstraintLayout>
