--- a/app/src/main/res/layout/activity_confirm_delete.xml
+++ b/app/src/main/res/layout/activity_confirm_delete.xml
@@ -9,6 +9,19 @@
     tools:context=".ConfirmDeleteActivity">
 
     <TextView
+        android:id="@+id/txtVConfirm_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:fontFamily="sans-serif-black"
+        android:text="THING 1"
+        android:textAlignment="center"
+        android:textColor="#FC5151"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtVConDel_thisIsWhat" />
+
+    <TextView
         android:id="@+id/txtVConfirmDelete_holdOn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -34,4 +47,67 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtVConfirmDelete_holdOn" />
+
+    <TextView
+        android:id="@+id/txtVConfirm_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:fontFamily="sans-serif-black"
+        android:text="THING 2"
+        android:textAlignment="center"
+        android:textColor="#FC5151"
+        app:layout_constraintStart_toStartOf="@+id/txtVConfirm_1"
+        app:layout_constraintTop_toBottomOf="@+id/txtVConfirm_1" />
+
+    <TextView
+        android:id="@+id/txtVConfirm_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:fontFamily="sans-serif-black"
+        android:text="THING 3"
+        android:textAlignment="center"
+        android:textColor="#FC5151"
+        app:layout_constraintStart_toStartOf="@+id/txtVConfirm_2"
+        app:layout_constraintTop_toBottomOf="@+id/txtVConfirm_2" />
+
+    <TextView
+        android:id="@+id/txtVConfirm_still"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="35dp"
+        android:fontFamily="sans-serif-black"
+        android:text="Knowing this, do you STILL want to delete THING?"
+        android:textAlignment="center"
+        android:textColor="#FC5151"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtVConfirm_3" />
+
+    <Button
+        android:id="@+id/btnVConfirm_yes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#FCCD40"
+        android:fontFamily="sans-serif-black"
+        android:text="YES"
+        android:textColor="#FB5151"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/btnVConfirm_no"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btnVConfirm_no"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="97dp"
+        android:backgroundTint="#FBCC40"
+        android:text="No, please take me back!"
+        android:textColor="#000000"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtVConfirm_still" />
 </androidx.constraintlayout.widget.ConstraintLayout>
