18 tasks left today

--- a/app/src/main/res/layout/activity_leave_review.xml
+++ b/app/src/main/res/layout/activity_leave_review.xml
@@ -12,11 +12,11 @@
         android:id="@+id/txtVLeaveReview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
+        android:layout_marginStart="64dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="54dp"
         android:fontFamily="sans-serif-black"
-        android:text="Review for TEAMNAME Team by USERNAME"
+        android:text="Review for USERNAME's Team"
         android:textAlignment="center"
         android:textColor="#FE5151"
         android:textSize="20sp"
