--- a/app/src/main/res/layout/activity_create_team.xml
+++ b/app/src/main/res/layout/activity_create_team.xml
@@ -152,11 +152,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="1dp"
+        android:layout_marginTop="2dp"
         android:layout_marginEnd="1dp"
         android:backgroundTint="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/txtVCreate_errorSix"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
     <Button
         android:id="@+id/btnVCreateTeam_back"
@@ -174,24 +175,13 @@
         android:id="@+id/btnVCreateTeam_createTeam"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="35dp"
         android:backgroundTint="#FDCE40"
         android:text="Create Team"
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtVCreate_errorSix" />
-
-    <TextView
-        android:id="@+id/txtVCreate_errorSix"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:fontFamily="sans-serif-black"
-        android:text="Error: Please select six Pokémon so your team members have lots of friends!"
-        android:textAlignment="center"
-        android:textColor="#FD5151"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+        app:layout_constraintTop_toBottomOf="@+id/spnVCreate_pkmn6" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
