--- a/app/src/main/res/layout/activity_team_details.xml
+++ b/app/src/main/res/layout/activity_team_details.xml
@@ -12,7 +12,7 @@
         android:id="@+id/txtVTeamDetails_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="2dp"
         android:fontFamily="sans-serif-black"
         android:text="Team by USERNAME"
         android:textColor="#FE5151"
@@ -25,97 +25,100 @@
         android:id="@+id/lvVTeamDetails_team"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="27dp"
-        android:layout_marginBottom="29dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView19"
+        android:layout_marginBottom="2dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView19"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/txtVTeamDetails_username" />
+        app:layout_constraintTop_toBottomOf="@+id/txtVTeamDetails_username" />
 
-    <ListView
-        android:id="@+id/lvVTeamDetails_reviews"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="3dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView21" />
-
-    <ImageButton
-        android:id="@+id/imgVDetails"
-        android:layout_width="129dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="17dp"
-        android:layout_marginBottom="22dp"
+    <Button
+        android:id="@+id/btnVdetails_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="14dp"
         android:backgroundTint="#FECF40"
-        android:scaleX=".8"
-        android:scaleY=".8"
-        app:layout_constraintBottom_toTopOf="@+id/lvVTeamDetails_reviews"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtVTeamDetails_average"
-        app:srcCompat="@drawable/battlebutton" />
+        android:text="Go Back"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView21"
+        app:layout_constraintStart_toStartOf="@+id/textView21" />
 
     <TextView
         android:id="@+id/textView19"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginBottom="11dp"
         android:text="Average Rating:"
         android:textColor="#FDCE40"
-        app:layout_constraintBaseline_toBaselineOf="@+id/txtVTeamDetails_average"
+        app:layout_constraintBottom_toTopOf="@+id/btnVdetails_back"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/txtVTeamDetails_average"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="27dp"
+        android:layout_marginTop="2dp"
         android:fontFamily="sans-serif-medium"
         android:text="#.##"
         android:textColor="#FDCE40"
-        app:layout_constraintBottom_toTopOf="@+id/btnVdetails_back"
         app:layout_constraintEnd_toStartOf="@+id/imgVDetails"
-        app:layout_constraintStart_toStartOf="@+id/imgVDetails" />
+        app:layout_constraintStart_toStartOf="@+id/imgVDetails"
+        app:layout_constraintTop_toBottomOf="@+id/lvVTeamDetails_team" />
 
     <Button
         android:id="@+id/btnVdetails_review"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="22dp"
+        android:layout_marginBottom="2dp"
         android:backgroundTint="#FDCE40"
         android:text="Review"
         android:textColor="#000000"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/lvVTeamDetails_reviews"
+        app:layout_constraintBottom_toBottomOf="@+id/imgVDetails"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/textView21"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
+        android:layout_marginEnd="73dp"
         android:fontFamily="sans-serif-black"
         android:text="Reviews:"
         android:textColor="#FE5151"
         android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="@+id/btnVdetails_back"
-        app:layout_constraintTop_toBottomOf="@+id/btnVdetails_back" />
-
-    <Button
-        android:id="@+id/btnVdetails_back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="280dp"
-        android:backgroundTint="#FECF40"
-        android:text="Go Back"
-        android:textColor="#000000"
-        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/imgVDetails"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/imgVDetails"
+        android:layout_width="0dp"
+        android:layout_height="58dp"
+        android:layout_marginTop="21dp"
+        android:layout_marginEnd="140dp"
+        android:layout_marginBottom="21dp"
+        android:backgroundTint="#FECF40"
+        android:scaleX=".8"
+        android:scaleY=".8"
+        app:layout_constraintBottom_toBottomOf="@+id/textView21"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView21"
+        app:layout_constraintTop_toTopOf="@+id/txtVTeamDetails_average"
+        app:srcCompat="@drawable/battlebutton" />
+
+    <ListView
+        android:id="@+id/lvVTeamDetails_reviews"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginBottom="2dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView21" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
