--- a/app/src/main/res/layout/cell_rating.xml
+++ b/app/src/main/res/layout/cell_rating.xml
@@ -6,60 +6,13 @@
     android:layout_height="match_parent"
     android:background="#253BF6">
 
-    <ImageView
-        android:id="@+id/imgStar5"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="70dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imgStar4"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imgStar4"
-        app:layout_constraintTop_toTopOf="@+id/imgStar4"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/grey_star" />
-
-    <ImageView
-        android:id="@+id/imgStar1"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="14dp"
-        app:layout_constraintBottom_toTopOf="@+id/rating_username"
-        app:layout_constraintEnd_toStartOf="@+id/imgStar2"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/grey_star" />
-
-    <ImageView
-        android:id="@+id/imgStar4"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="17dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imgStar3"
-        app:layout_constraintEnd_toStartOf="@+id/imgStar5"
-        app:layout_constraintStart_toEndOf="@+id/imgStar3"
-        app:layout_constraintTop_toTopOf="@+id/imgStar3"
-        app:srcCompat="@drawable/grey_star" />
-
-    <ImageView
-        android:id="@+id/imgStar3"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imgStar2"
-        app:layout_constraintEnd_toStartOf="@+id/imgStar4"
-        app:layout_constraintStart_toEndOf="@+id/imgStar2"
-        app:layout_constraintTop_toTopOf="@+id/imgStar2"
-        app:srcCompat="@drawable/grey_star" />
-
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="19dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="77dp"
         android:fontFamily="sans-serif-black"
         android:text="SCORE:"
         android:textColor="#FC5151"
@@ -69,16 +22,14 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imgStar2"
+        android:id="@+id/imgStar1"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="14dp"
-        app:layout_constraintBottom_toTopOf="@+id/rating_username"
-        app:layout_constraintEnd_toStartOf="@+id/imgStar3"
-        app:layout_constraintStart_toEndOf="@+id/imgStar1"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginEnd="1dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imgStar2"
+        app:layout_constraintEnd_toStartOf="@+id/imgStar2"
+        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintTop_toTopOf="@+id/imgStar2"
         app:srcCompat="@drawable/grey_star" />
 
     <TextView
@@ -86,12 +37,54 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="660dp"
+        android:layout_marginTop="14dp"
         android:fontFamily="sans-serif-medium"
         android:text="Review by REVIEWER"
         android:textColor="#FB5151"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgStar2" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <ImageView
+        android:id="@+id/imgStar4"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imgStar5"
+        app:layout_constraintEnd_toStartOf="@+id/imgStar5"
+        app:layout_constraintStart_toEndOf="@+id/imgStar3"
+        app:layout_constraintTop_toTopOf="@+id/imgStar5"
+        app:srcCompat="@drawable/grey_star" />
+
+    <ImageView
+        android:id="@+id/imgStar5"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="76dp"
+        android:layout_marginBottom="14dp"
+        app:layout_constraintBottom_toTopOf="@+id/rating_username"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imgStar4"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/grey_star" />
+
+    <ImageView
+        android:id="@+id/imgStar3"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imgStar4"
+        app:layout_constraintEnd_toStartOf="@+id/imgStar4"
+        app:layout_constraintStart_toEndOf="@+id/imgStar2"
+        app:layout_constraintTop_toTopOf="@+id/imgStar4"
+        app:srcCompat="@drawable/grey_star" />
+
+    <ImageView
+        android:id="@+id/imgStar2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imgStar3"
+        app:layout_constraintEnd_toStartOf="@+id/imgStar3"
+        app:layout_constraintStart_toEndOf="@+id/imgStar1"
+        app:layout_constraintTop_toTopOf="@+id/imgStar3"
+        app:srcCompat="@drawable/grey_star" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
